--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ markdown_extensions:
       alternate_style: true          
   - toc:
       permalink: true          
+      toc_depth: 3
   - tables
 
   - pymdownx.highlight:
@@ -51,7 +52,7 @@ theme:
     # - navigation.indexes
     - navigation.top
     
-    - toc.follow
+    # - toc.follow
     - toc.integrate
 
 extra:
