--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,12 @@ jobs:
       #     user_email: 41898282+github-actions[bot]@users.noreply.github.com
       
       - name: Set AWS S3 credentials
-        run: aws configure --profile qfpay set aws_access_key_id ${{ secrets.ACCESS_KEY_ID}} set aws_secret_access_key ${{ secrets.SECRET_ACCESS_KEY}} 
-
-      - name: Deploy to AWS S3
-        run: aws s3 sync ./deploy s3://sdk-test.qfapi.com/ --delete --profile qfpay --region ap-east-1
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read --follow-symlinks --delete
+        env:
+          AWS_S3_BUCKET: s3://sdk-test.qfapi.com/
+          AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+          AWS_REGION: 'ap-east-1'
+          SOURCE_DIR: './deploy'
