--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,31 +30,31 @@ jobs:
 
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
-      # - name: Deploy to GitHub Pages
-      #   uses: peaceiris/actions-gh-pages@v3
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     # Build output to publish to the `gh-pages` branch:
-      #     publish_dir: ./deploy
-      #     keep_files: true
-      #     # The following lines assign commit authorship to the official
-      #     # GH-Actions bot for deploys to `gh-pages` branch:
-      #     # https://github.com/actions/checkout/issues/13#issuecomment-724415212
-      #     # The GH actions bot is used by default if you didn't specify the two fields.
-      #     # You can swap them out with your own user credentials.
-      #     user_name: github-actions[bot]
-      #     user_email: 41898282+github-actions[bot]@users.noreply.github.com
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # Build output to publish to the `gh-pages` branch:
+          publish_dir: ./deploy
+          keep_files: true
+          # The following lines assign commit authorship to the official
+          # GH-Actions bot for deploys to `gh-pages` branch:
+          # https://github.com/actions/checkout/issues/13#issuecomment-724415212
+          # The GH actions bot is used by default if you didn't specify the two fields.
+          # You can swap them out with your own user credentials.
+          user_name: github-actions[bot]
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com
 
-      - name: Restore the orignal files
-        run: aws s3 cp s3://sdk.qfapi.com/ s3://sdk.qfapi.com/backup_$(date +%Y%m%d%H%M%S) --recursive --exclude "backup_*"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }} 
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'ap-east-1'
+      # - name: Restore the orignal files
+      #   run: aws s3 cp s3://sdk.qfapi.com/ s3://sdk.qfapi.com/backup_$(date +%Y%m%d%H%M%S) --recursive --exclude "backup_*"
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }} 
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+      #     AWS_DEFAULT_REGION: 'ap-east-1'
 
-      - name: Upload to AWS S3
-        run: aws s3 cp ./build s3://sdk.qfapi.com/ --recursive --force
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'ap-east-1'
+      # - name: Upload to AWS S3
+      #   run: aws s3 cp ./build s3://sdk.qfapi.com/ --recursive --force
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+      #     AWS_DEFAULT_REGION: 'ap-east-1'
